# floatview

./: .gitignore  AGENTS.md  README.md  designdoc.md  package-lock.json  package.json
.github/workflows/: build.yml
js/: urltest.mjs  urltest.test.mjs
src/: index.css  index.html  main.js
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  browsing_data.rs  clear_site_data.rs  click_through.rs  commands.rs  config.rs  config_io.rs  hotkeys.rs  injection.js  injection.rs  lib.rs  logging.rs  main.rs  opacity.rs  ops.rs  state.rs  tray.rs  url_fixtures.rs  urls.rs  window_state.rs
